[api-ng] Add search_fields request
